# Marid

./: CMakeLists.txt  README.md
assets/treeify_prototype/: treeify.py
include/marid/Analysis/: ConstantBoundednessAnalysis.h
include/marid/Passes/: CheckConstantBoundednessPass.h  LoopExpansionPass.h  MemoryAllocationPass.h  TreeScanDefragMemoryAllocationPass.h  TreeScanMemoryAllocationPass.h  TreeificationPass.h
lib/: CMakeLists.txt
lib/Analysis/: ConstantBoundednessAnalysis.cpp
lib/Passes/: CheckConstantBoundednessPass.cpp  LoopExpansionPass.cpp  MemoryAllocationPass.cpp  TreeScanDefragMemoryAllocationPass.cpp  TreeScanMemoryAllocationPass.cpp  TreeificationPass.cpp
tests/constant_boundedness/: t0.mlir  t1.mlir
tests/loop_expansion/: nested_for.mlir  simple_for.mlir
tests/mem_allocation/: nested_if.mlir  run_mlir.sh  t0.mlir  t1.mlir  t10_defrag0.mlir  t11_defrag.mlir  t12_no_defrag.mlir  t13_loop_defrag.c  t13_loop_defrag.mlir  t2.mlir  t3.mlir  t4.mlir  t5.mlir  t6.mlir  t7_multi_last_uses.mlir  t8_loop.mlir  t9_loop_join.mlir
tests/runtime_tests/: gen_and_bench.py  log_perf_counters.py  sweep.py
tests/treeification/: join_if.mlir  multi_result.mlir  nested.mlir  seq.mlir  simple_ret_if.mlir
tools/: CMakeLists.txt
tools/marid-opt/: CMakeLists.txt  marid-opt.cpp
